bug: Make toolbar fonts more readable

--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ span {
 #toolbar {
     display: flex;
     width: 80%;
-
+    font-size: 1.8em;
 }
 
 #toolbar > * {
